--- a/.github/workflows/clone-commit-show.yml
+++ b/.github/workflows/clone-commit-show.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: Clone repository
         run: |
-          git clone https://github.com/albi005/k8s.git
+          git clone https://github.com/dummy-alb1/k8s.git
       - name: Create commit
         run: |
           cd k8s
