--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,6 +10,30 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Create dynamic renovate.json
+        run: |
+          cat <<EOF > renovate.json
+          {
+            "\$schema": "https://docs.renovatebot.com/renovate-schema.json",
+            "onboarding": false,
+            "enabledManagers": ["kubernetes"],
+            "kubernetes": {
+              "fileMatch": ["^startsch/startsch\\.yaml$"]
+            },
+            "packageRules": [
+              {
+                "matchPackagePatterns": ["*"],
+                "enabled": false
+              },
+              {
+                "matchPackageNames": ["ghcr.io/kir-dev/startsch"],
+                "enabled": true,
+                "pinDigests": true
+              }
+            ]
+          }
+          EOF
+
       - name: Run Renovate on K8s Repo
         uses: renovatebot/github-action@v40.1.0
         with:
@@ -19,6 +43,6 @@ jobs:
           renovate-version: latest
           token: ${{ secrets.APT }}
         env:
-          LOG_LEVEL: debug # Uncomment if you need to troubleshoot
+          # LOG_LEVEL: debug # Uncomment if you need to troubleshoot
           # This forces the token into the context so Renovate can use it
           RENOVATE_TOKEN: ${{ secrets.APT }}
